little fix on mobile view

--- a/public/main.css
+++ b/public/main.css
@@ -1243,6 +1243,9 @@ a:visited{
     .newBox div{
         width: 100%;
     }
+    .weatherAPP h1{
+        font-size: 1.4rem;
+    }
 }
 
 
